# librime-llmresponse-display

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: luna_pinyin.custom.yaml
example/candidate/alice/: 1731400000000_a1b2c3d4.json
src/: llmresponse_constants.h  llmresponse_db.cc  llmresponse_db.h  llmresponse_engine.cc  llmresponse_engine.h  llmresponse_module.cc  llmresponse_processor.cc  llmresponse_processor.h  llmresponse_segmentor.cc  llmresponse_segmentor.h  llmresponse_translator.cc  llmresponse_translator.h
